warrantyagentvolt/force-app/main/default/objects/Warranty_Claim__c/Warranty_Claim__c.object-meta.xml
<CustomObject>
    <description>Object used to track and manage warranty claims within the organization.</description>
    <label>Warranty Claim</label>
    <nameField>
        <displayFormat>WC-{00000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>