warrantyagentvolt/force-app/main/default/objects/Warranty_Claim__c/fields/Approved_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_Date__c</fullName>
    <description>Date when the warranty claim was approved or rejected</description>
    <inlineHelpText>Enter the date this warranty claim was approved or rejected</inlineHelpText>
    <label>Approved/Rejected Date</label>
    <type>Date</type>
</CustomField>