warrantyagentvolt/force-app/main/default/objects/Warranty_Claim__c/fields/Approver_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approver_Notes__c</fullName>
    <description>Notes from the approver regarding the warranty claim decision</description>
    <inlineHelpText>Enter any notes or comments about the approval or rejection decision</inlineHelpText>
    <label>Approver Notes</label>
    <type>TextArea</type>
</CustomField>