warrantyagentvolt/force-app/main/default/objects/Warranty_Claim__c/fields/Claimed_Part__c.field-meta.xml
<CustomField>
    <fullName>Claimed_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the warranty claim to the product/part that is being claimed under warranty</description>
    <inlineHelpText>Select the product or part that has failed and is covered under warranty</inlineHelpText>
    <label>Claimed Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Warranty Claims</relationshipLabel>
    <relationshipName>Warranty_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>