warrantyagentvolt/force-app/main/default/objects/Warranty_Claim__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the warranty claim to the dealer (Account) that submitted it</description>
    <inlineHelpText>Select the dealer account that is submitting this warranty claim</inlineHelpText>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warranty Claims</relationshipLabel>
    <relationshipName>Warranty_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>