warrantyagentvolt/force-app/main/default/objects/Warranty_Claim__c/fields/Dealer_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Attachments__c</fullName>
    <description>Rich text field for dealer to provide additional documentation and attachments information</description>
    <inlineHelpText>Provide information about supporting documentation, photos, or other attachments related to this warranty claim</inlineHelpText>
    <label>Dealer Attachments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>