warrantyagentvolt/force-app/main/default/objects/Warranty_Claim__c/fields/Failure_Description__c.field-meta.xml
<CustomField>
    <fullName>Failure_Description__c</fullName>
    <description>Detailed description of the failure or issue covered by the warranty claim</description>
    <inlineHelpText>Provide a detailed description of the part failure, symptoms, and any relevant diagnostic information</inlineHelpText>
    <label>Failure Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>