warrantyagentvolt/force-app/main/default/objects/Warranty_Claim__c/fields/Mileage_at_Claim__c.field-meta.xml
<CustomField>
    <fullName>Mileage_at_Claim__c</fullName>
    <description>Records the vehicle mileage at the time the warranty claim was submitted</description>
    <inlineHelpText>Enter the current mileage reading from the vehicle odometer</inlineHelpText>
    <label>Mileage at Claim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>