warrantyagentvolt/force-app/main/default/objects/Warranty_Claim__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Date when the warranty claim was submitted for review</description>
    <inlineHelpText>Enter the date this warranty claim was submitted</inlineHelpText>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>