warrantyagentvolt/force-app/main/default/objects/Warranty_Claim__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the warranty claim to the vehicle that has the warranty issue</description>
    <inlineHelpText>Select the vehicle associated with this warranty claim</inlineHelpText>
    <label>Vehicle</label>
    <referenceTo>Vehicle</referenceTo>
    <relationshipLabel>Warranty Claims</relationshipLabel>
    <relationshipName>Warranty_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>